<resources>
    <string name="app_name">手机助手</string>
    <string name="title_activity_base_action_bar">BaseActionBarActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_holder">text_holder</string>
    <string name="text_net_error">网络连接失败，请点击刷新!</string>

    <!--手机状态页面-->
    <string name="phone_state_all_show_float_window">全部显示到悬浮窗</string>
    <string name="phone_state_ram_static">内存状态：%s</string>
    <string name="phone_state_battery_static">电池状态：%s</string>
    <string name="phone_state_battery_capacity">电量：%s</string>
    <string name="phone_state_battery_voltage">当前电压：%s</string>
    <string name="phone_state_battery_temperature">电池温度：%s</string>
    <string name="phone_state_rom_state">手机存储状态：%s</string>
    <string name="phone_state_sdcard_rom_state">内存卡存储状态：%s</string>
    <string name="phone_state_download_speed">下载速度：%s</string>
    <string name="phone_state_upload_speed">上传速度：%s</string>
    <!--手机状态悬浮窗-->
    <string name="phone_state_float_ram_static">RAM：%s</string>
    <string name="phone_state_float_battery_static">电池状态：%s</string>
    <string name="phone_state_float_battery_capacity">电量：%s</string>
    <string name="phone_state_float_battery_voltage">电压：%s</string>
    <string name="phone_state_float_battery_temperature">电池温度：%s</string>
    <string name="phone_state_float_rom_state">ROM：%s</string>
    <string name="phone_state_float_sdcard_rom_state">SDcard：%s</string>
    <string name="phone_state_float_download_speed">下载：%s</string>
    <string name="phone_state_float_upload_speed">上传：%s</string>
    <!--红包提醒-->
    <string name="red_envelope_desc">手机助手-微信红包提醒</string>
    <string name="red_envelope_auto_click">发现红包自动进入聊天会话页面</string>
    <!--新闻-->
    <!--网易新闻-->
    <string name="news_netease_comment_count">评论:%s条</string>
</resources>
